cluster/workbench/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab
  namespace: workbench
  labels:
    app: jupyter-lab
    tailscale.com/proxy-class: "tailscale-proxy"
    tailscale.com/hostname: "jupyter"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - port: 80
      targetPort: jupyter
      protocol: TCP
      name: jupyter
  selector:
    app: jupyter-lab
